<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="100dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/word_per_day_tips" />
        <EditText
            android:id="@+id/et_words_per_day"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_horizontal" />
        <TextView
            android:id="@+id/tv_words_per_day_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/common_selector"
            android:padding="10dp"
            android:textColor="#0000ff"
            android:text="@string/word_per_day_confirm" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="30dp"
        android:background="#ccc"/>

    <TextView
        android:id="@+id/tv_plan_10k"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        style="@style/CommonWidget"
        android:text="@string/plan_10k" />

    <TextView
        android:id="@+id/tv_plan_20k"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        style="@style/CommonWidget"
        android:text="@string/plan_20k" />

    <TextView
        android:id="@+id/tv_plan_30k"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        style="@style/CommonWidget"
        android:text="@string/plan_30k" />

    <TextView
        android:id="@+id/tv_plan_40k"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        style="@style/CommonWidget"
        android:text="@string/plan_40k" />

    <TextView
        android:id="@+id/tv_plan_50k"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        style="@style/CommonWidget"
        android:text="@string/plan_50k" />

    <TextView
        android:id="@+id/tv_plan_52k"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        style="@style/CommonWidget"
        android:text="@string/plan_52k" />


</androidx.appcompat.widget.LinearLayoutCompat>